--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "compile:sass": "node-sass sass/main.scss css/style.css",
     "build": "webpack --mode production"
   },
@@ -14,9 +14,11 @@
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.7.6",
     "sass": "^1.69.4",
     "sass-loader": "^13.3.2",
@@ -27,5 +29,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2"
-  }
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(js|jsx)?$": "babel-jest"
+    }
+  }  
 }
