--- a/package.json
+++ b/package.json
@@ -4,35 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "compile:sass": "node-sass sass/main.scss css/style.css",
-    "build": "webpack --mode production"
+    "start": "webpack-dev-server --open --mode development",
+    "build": "webpack --mode production",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "babel-jest": "^29.7.0",
-    "babel-loader": "^9.1.3",
+  "dependencies": {
+    "@types/jest": "^29.5.6",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
-    "mini-css-extract-plugin": "^2.7.6",
-    "sass": "^1.69.4",
-    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.0",
+    "typescript": "^5.2.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
-  "dependencies": {
-    "bootstrap": "^5.3.2"
-  },
   "jest": {
     "transform": {
-      "^.+\\.(js|jsx)?$": "babel-jest"
-    }
-  }  
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
+    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
+  }
 }
