--- a/package.json
+++ b/package.json
@@ -12,23 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jest": "^29.5.6",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
-    "jest": "^29.7.0",
     "style-loader": "^3.3.3",
-    "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.0",
-    "typescript": "^5.2.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
-  "jest": {
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
+  "devDependencies": {
+    "@types/jest": "^29.5.6",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
   }
 }
