--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^6.8.1",
+    "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.6",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
